Bug 12041 - 2.6.28-rc4 mem_cgroup_charge_common panic
Summary: 2.6.28-rc4 mem_cgroup_charge_common panic
Status: CLOSED CODE_FIX
Alias: None
Product: Memory Management
Classification: Unclassified
Component: Other (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: KAMEZAWA Hiroyuki
URL:
Keywords:
Depends on:
Blocks: 11808
  Show dependency tree
 
Reported: 2008-11-15 15:32 UTC by Rafael J. Wysocki
Modified: 2008-12-03 15:28 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.28-rc4
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments

Description Rafael J. Wysocki 2008-11-15 15:32:54 UTC
Subject    : 2.6.28-rc4 mem_cgroup_charge_common panic
Submitter  : Badari Pulavarty <pbadari@us.ibm.com>
Date       : 2008-11-10 21:43
References : http://marc.info/?l=linux-kernel&m=122635343008147&w=4
Handled-By : KAMEZAWA Hiroyuki <kamezawa.hiroyu@jp.fujitsu.com>

This entry is being used for tracking a regression from 2.6.27.  Please don't
close it until the problem is fixed in the mainline.
Comment 1 KAMEZAWA Hiroyuki 2008-11-16 16:03:10 UTC
It seems than memory cgroup's support for memory-hotplug is not good. 
Can be avoided when memcg is not used (by config or boot option).

In my test box, x86-64 which doesn't have physical memory hotplug feature,
I can't reproduce the issue. Just online/offline memory doesn't show panic.

Some bugfix patches (from review) are in mmotm and I'm now looking for how to test.

Thanks,
-Kame
Comment 2 Badari Pulavarty 2008-11-17 13:32:02 UTC
Kame's patch to change init_section_page_cgroup() seems to have
fixed this problem. This is on top of mmotm.

Tests ran fine over the weekend (60+ hours).
Comment 3 Rafael J. Wysocki 2008-11-22 13:40:04 UTC
Can you provide a pointer to the patch, please?
Comment 4 Rafael J. Wysocki 2008-11-22 13:42:05 UTC
Never mind. :-)

Fixed by commit 33c5d3d64589c5d379db5a5615735f6d08438369 .
Comment 5 Badari Pulavarty 2008-11-25 15:29:24 UTC
Hmm.. I see this problem again on 2.6.28-rc6. Did the fix ever made into mainline ?
Comment 6 Rafael J. Wysocki 2008-11-25 16:42:55 UTC
Apparently it did, so it was not a fix. :-(

Note You need to log in before you can comment on or make changes to this bug.